--- a/index.html
+++ b/index.html
@@ -129,13 +129,11 @@
         })
       })
       .then((response) => {
-        if(response.status === 200 || response.status === 201) {
-          return response.json();
-        } else if (response.status === 400) {
+        if (response.status === 400) {
           throw new Error("< 2 sumb");
         } else if (response.status === 500) {
           throw new Error("server fall");
-        } else return new Error("Unknown error");
+        } else return response.json();
       }).then((responseData) => {
         authorInputElement.value = "";
         textInputElement.value = "";
@@ -149,13 +147,10 @@
           alert("Имя и комментарий должны быть не короче 3 символов");
           authorInputElement.classList.add("error");
           textInputElement.classList.add("error");
-        }
-        if (error.message === "server fall") {
+        } else if (error.message === "server fall") {
           alert("Сервер сломался, попробуй позже");
-        }
-        if (error.message === "Unknown error") {
-          alert("Кажется, у Вас пропал Интернет, попробуйте позже!");
-        }
+        } else return alert("Кажется, у Вас пропал Интернет, попробуйте позже!");
+        
         hideElement(addCommentLoader);
         showElement(formElement);
       })
