--- a/index.html
+++ b/index.html
@@ -7,9 +7,13 @@
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-<div id="app" class="app"></div>
+<div id="app" class="app">
+  <div class="loader_1">
+    Подождите, комментарии загружаются...
+  </div>
+</div>
 </body>
-<script type="module" src="./main.js"></script>
+<script type="module" src="./dist/main.js"></script>
 
 </html>
 
